<resources>
    <string name="app_name">Task Master</string>
    <string name="title_activity_all_tasks">AllTasks</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="username">UserName</string>
    <string name="tasks">Tasks</string>
    <string name="hello">Hello World</string>
    <string name="all_tasks">All Tasks</string>
    <string name="back">Back</string>
<!--    <string name="todo">TODO</string>-->
    <string name="task_three">Task Three</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_a_task">Add a Task</string>
    <!--    <string name="all_tasks">All Tasks</string>-->
    <string name="settings">Settings</string>
    <string name="task_two">Task Two</string>
    <string name="task_one">Task One</string>
    <!--    <string name="tasks">Tasks</string>-->
    <string name="img">img</string>
    <string name="add_task">Add Task</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <!--    <string name="add_task">Add Task</string>-->
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="assigned">assigned</string>
    <string name="home">home</string>
    <string name="team_name">Team Name</string>
    <string name="team_c">Team C</string>
    <string name="radiobutton">RadioButton</string>
    <string name="team_b">Team B</string>
    <string name="team_a">Team A</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_page">login page</string>
<!--    <string name="password">Password</string>-->
<!--    <string name="email">Email</string>-->
    <string name="login">Login</string>
    <string name="sign_up_">Sign up</string>
<!--    <string name="sign_up_">Sign up</string>-->
    <string name="complete_registration">Complete Registration</string>
    <string name="sign_up_confirmation">Sign up Confirmation</string>
    <string name="your_email">your email</string>
    <string name="confimation_code">Confimation Code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="login_in_home">login in</string>
    <string name="log_out">log out</string>
    <string name="my_email">My email</string>
    <string name="user_email">User Email</string>
    <string name="upload_image">Upload Image</string>
    <string name="tempimg">tempimg</string>
    <string name="image">image</string>
    <string name="detailimg">detailimg</string>
    <string name="fragmentimg">fragmentImg</string>
    <string name="location">location</string>
    <!--    <string name="todo">TODO</string>-->
</resources>